--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
 							<a href="/404.html">:=&䈎面圖標：尋无&=:　尋无</a><br>
 							<a href="/聯繫我.html">:=&䈎面圖標：聯繫我&=:　聯繫我</a><br>
 							<hr>
-							<a href="https://github.com/soizo/">:=&GITHUB=:　GITHUB</a>
+							<a href="https://github.com/soizo/">:=&GITHUB=:　GITHUB</a><br>
+							<a href="https://music.163.com/#/user/home?id=4993481409">:=&廠商：网易云&=:　网易云</a><br>
+							<a
+								href="https://y.qq.com/n/ryqq/profile?uin=oK6kowEAoK4z7K6k7eokoKEA7c**/">:=&廠商：QQ音樂&=:　ＱＱ音樂</a><br>
 						</div>
 					</div>
 				</td>
