--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="height=device-height, initial-scale=0.9" />
+	<!-- iOS 所需的 Meta 標籤 -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#779f6b">
+
 	<title>灋顯東石的个人主䈎</title>
 	<script src="/javascript/公共/好多函數！.js"></script>
 	<script src="/javascript/公共/橫向捲動.js"></script>
