--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="height=device-height, initial-scale=0.9" />
 	<!-- ThemeColor -->
-	<meta name="theme-color" content="#779f6b">
+	<meta name="theme-color" content="#dff1db">
 
 
 	<title>灋顯東石的个人主䈎</title>
