--- a/狗INFP-T.html
+++ b/狗INFP-T.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=0.9" />
 	<link rel="icon" href="assets/小丑INFP.png" type="image/png" />
 	<link rel="preload" href="assets/視頻/狗INFP-小丑.mp4" type="video/mp4" as="fetch" crossorigin="anonymous" />
+	<!-- ThemeColor -->
+	<meta name="theme-color" content="white">
 	<!-- iOS 所需的 Meta 標籤 -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="white">
