--- a/日誌.html
+++ b/日誌.html
@@ -10,6 +10,14 @@
 	<script src="/javascript/日誌/日誌.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
 	<script src="/javascript/公共/絵文字.js"></script>
+	<!-- ThemeColor -->
+	<meta name="theme-color" content="black">
+	<!-- iOS 所需的 Meta 標籤 -->
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-title" content="日誌">
+	<link rel="apple-touch-icon" s-href="䈎面圖標：日誌">
+
 	<link rel="icon" s-href="䈎面圖標：日誌" type="image/x-icon" />
 	<link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all" />
