--- a/狗INFP-T.html
+++ b/狗INFP-T.html
@@ -12,7 +12,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="white">
 	<meta name="apple-mobile-web-app-title" content="狗INFP-T">
-	<link rel="apple-touch-icon" href="assets/小丑INFP-應用圖標.png">
+	<link rel="apple-touch-icon" href="assets/圖象/應用圖標/小丑INFP.png">
 	<style>
 		body,
 		html {
