--- a/日誌.html
+++ b/日誌.html
@@ -16,7 +16,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="日誌">
-	<link rel="apple-touch-icon" s-href="䈎面圖標：日誌">
+	<link rel="apple-touch-icon" href="assets/圖象/應用圖標/event_log.png">
 
 	<link rel="icon" s-href="䈎面圖標：日誌" type="image/x-icon" />
 	<link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
