--- a/wiki.html
+++ b/wiki.html
@@ -1,46 +1,25 @@
 <!DOCTYPE html>
 <html 滾動條theme="wiki">
-    <head>
-        <meta
-            name="viewport"
-            content="height=device-height, initial-scale=0.9"
-        />
-        <title>SOIZO wiki</title>
-        <script src="/javascript/公共/好多函數！.js"></script>
-        <script src="/javascript/公共/橫向捲動.js"></script>
-        <script src="/javascript/公共/私用字.js"></script>
-        <script src="/javascript/公共/絵文字.js"></script>
-        <script src="/javascript/公共/豎排符號.js"></script>
-        <script src="/showdown/dist/showdown.js"></script>
-        <link
-            rel="preload"
-            href="/fonts/閹割unifont-Medium.woff2"
-            as="font"
-            type="font/woff2"
-            crossorigin="anonymous"
-        />
-        <link
-            href="/css/功能.css"
-            rel="stylesheet"
-            type="text/css"
-            media="all"
-        />
-        <link
-            href="/css/滾動條/方滾動條.css"
-            rel="stylesheet"
-            type="text/css"
-            media="all"
-        />
-        <link
-            href="/css/wiki.css"
-            rel="stylesheet"
-            type="text/css"
-            media="all"
-        />
-        <link rel="icon" href="/assets/絵文字/WIKI.png" type="image/x-icon" />
-    </head>
-    <body class="prompt-list-group-content">
-        <div id="content"></div>
-        <script src="/javascript/wiki/wiki.js"></script>
-    </body>
+
+<head>
+	<meta name="viewport" content="height=device-height, initial-scale=0.9" />
+	<title>SOIZO wiki</title>
+	<script src="/javascript/公共/好多函數！.js"></script>
+	<script src="/javascript/公共/橫向捲動.js"></script>
+	<script src="/javascript/公共/私用字.js"></script>
+	<script src="/javascript/公共/絵文字.js"></script>
+	<script src="/javascript/公共/豎排符號.js"></script>
+	<script src="/showdown/dist/showdown.js"></script>
+	<link rel="preload" href="/fonts/閹割unifont-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/css/滾動條/方滾動條.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/css/wiki.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="icon" href="/assets/絵文字/WIKI.png" type="image/x-icon" />
+</head>
+
+<body class="prompt-list-group-content">
+	<div id="content"></div>
+	<script src="/javascript/wiki/wiki.js"></script>
+</body>
+
 </html>
