--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<li><b>男性</b>　理解多元性傾向支持<a class="wiki" target="_blank"
 										href="/wiki.html?title=性別四元論">性別四元論</a>
 								</li>
-								<li><b>ＭＢＴＩ</b>人格爲Ｔ類<a target="_blank"
-										href="https://www.16personalities.com/tw/infp-%E6%80%A7%E6%A0%BC">調停者</a><a
+								<li><b>ＭＢＴＩ</b>人格爲<a target="_blank"
+										href="https://www.16personalities.com/tw/infp-%E6%80%A7%E6%A0%BC">調停者</a>Ｔ類<a
 										href="/%E7%8B%97INFP-T.html" target="_blank" style="background:none;"><img
 											s-src="MBTI：INFP-T" style="width: 2em; float: up;"></img></a></li>
 								<li><b>編程語言 :=&CODE=:</b><br />學得很雜　譬如<a href="https://scratch.mit.edu/download"
@@ -116,6 +116,191 @@
 								href="https://y.qq.com/n/ryqq/profile?uin=oK6kowEAoK4z7K6k7eokoKEA7c**/">:=&廠商：QQ音樂&=:　ＱＱ音樂</a><br>
 						</div>
 					</div>
+					<div style="writing-mode: horizontal-tb;">
+						<div id="musicbox">
+							<div class="unselectable">
+							</div>
+							<script>
+								const API_KEY = 'e0e9854b15c2f71b37b26e29342509ba';
+								const USER_NAME = 'SoizoKtantas';
+								let lastValidTrackUrl = null; // 用於存儲最後一次有效的音樂鏈接
+
+								// 函數：從 API 獲取並更新音樂盒資訊
+								function updateMusicBox() {
+									fetch(`https://ws.audioscrobbler.com/2.0/?method=user.getRecentTracks&user=${USER_NAME}&api_key=${API_KEY}&format=json&limit=1`)
+										.then(response => response.json())
+										.then(data => {
+											const tracks = data.recenttracks.track;
+											if (tracks.length > 0) {
+												const track = tracks[0];
+												const currentTrackUrl = track.url ? track.url : '#';
+
+												// 只有在鏈接發生實質性變化時才更新音樂盒
+												if (currentTrackUrl !== lastValidTrackUrl) {
+													console.log(track);
+													const imageUrl = track.image[2]['#text'] ? track.image[2]['#text'] : '/assets/圖象/UI/musicbox/defaultMusic.png';
+													const musicBox = document.querySelector('#musicbox>div');
+													const nowplaying = ["@attr"].nowplaying in track;
+													let 最近時間 = '';
+													if (!nowplaying && track.date) {
+														let 中國時間 = new Date(track.date['#text']);
+														中國時間.setHours(中國時間.getHours() + 8);
+														最近時間 = window.轉換道曆(中國時間, undefined, 'YY年MMDDHHQQ');
+													}
+													const trackInfoHTML = `
+														<b class="currentlylistening"><span style="color:${nowplaying ? '#7bd88f' : '#ffffff80'};">●</span>　最近播放：</b>
+														<a href="${currentTrackUrl}" target="_blank" class="track">
+															<img src="${imageUrl}" class="albumcover">
+															<div>
+																<marquee class="songname" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">${track.name}</marquee>
+																<div class="artist">${track.artist ? track.artist['#text'] : '佚名'}</div>
+															</div>
+														</a>
+														<div class="lastplayed">${nowplaying ? '只今聴' : ('上次聴：　' + 最近時間)}</div>
+													`;
+
+													musicBox.innerHTML = trackInfoHTML;
+													lastValidTrackUrl = currentTrackUrl; // 更新最後一次有效的鏈接
+												}
+											} else {
+												document.querySelector('#musicbox>div').innerHTML = '<p>无有最近播放</p>';
+											}
+										})
+										.catch(err => {
+											console.error('擷取Last.fm數據錯誤：', err);
+											document.querySelector('#musicbox>div').innerHTML = '<p>擷取數據錯誤</p>';
+										});
+								}
+
+								// 初始更新
+								updateMusicBox();
+
+								// 監聽器設置，用於偵測鏈接變化
+								const observer = new MutationObserver(mutations => {
+									mutations.forEach(mutation => {
+										if (mutation.type === 'childList' && mutation.addedNodes.length) {
+											updateMusicBox();
+										}
+									});
+								});
+
+								// 設定監聽的目標節點及配置
+								const targetNode = document.querySelector('#musicbox>div');
+								const config = { childList: true };
+
+								// 啟動監聽
+								observer.observe(targetNode, config);
+
+
+							</script>
+							<style>
+								#musicbox>div {
+									writing-mode: horizontal-tb;
+									width: 250px;
+									background-color: #1f1f1f;
+									border: 2px solid #383838;
+									border-radius: 4px;
+									color: #fff;
+									padding: 10px 15px;
+									margin: 5px 0;
+									font-family: 閹割Unifont;
+									box-shadow: inset 0 0 6px rgba(70, 70, 70, .479);
+									display: block;
+								}
+
+								#musicbox>div .track {
+									display: flex;
+									align-items: center;
+								}
+
+								#musicbox>div .albumcover {
+									width: 50px;
+									height: 50px;
+									margin-right: 10px;
+									margin-top: 10px;
+									image-rendering: pixelated;
+									/* object-fit: contain; */
+									/* 保證圖片完整顯示且比例不變 */
+								}
+
+								#musicbox>div .songname {
+									font-size: 0.9em;
+									font-smooth: never;
+									-webkit-font-smoothing: none;
+									max-width: 150px;
+								}
+
+								#musicbox>div .artist {
+									font-size: 0.9em;
+									color: #fff;
+									text-shadow: var(--body-text-shadow);
+									max-width: 150px;
+									white-space: nowrap;
+									overflow: hidden;
+								}
+
+								#musicbox>div .lastplayed {
+									color: gray;
+									font-size: 0.8em;
+									margin-top: 8px;
+								}
+
+								#musicbox>div a,
+								#musicbox>div a * {
+									color: white;
+									text-decoration: none;
+								}
+
+								#musicbox>div a *:not(div:not([class])):hover {
+									text-decoration: underline;
+								}
+							</style>
+						</div>
+						<div style="width: 280px;">
+							<style>
+								.迴轉 * {
+									height: 30px;
+									image-rendering: pixelated;
+								}
+							</style>
+							<marquee class="迴轉" alt="態度" scrollamount="5" loop="infinite" onmouseover="this.stop();"
+								onmouseout="this.start();">
+
+							</marquee>
+							<marquee class="迴轉" alt="好站" scrollamount="5" loop="infinite" onmouseover="this.stop();"
+								onmouseout="this.start();" direction="right">
+								<a href="https://dimden.dev/"><img
+										src="https://dimden.dev/services/images/88x31.gif"></a>
+								<a href="https://cherubiims.neocities.org" target="_blank"><img
+										src="https://cherubiims.neocities.org/cherubbutton.gif"></a>
+								<a href="https://melokaji.neocities.org/"> <img
+										src="https://melokaji.neocities.org/images/melobutton.gif" alt="melokaji"></a>
+								<a href="https://philia995.neocities.org/"><img
+										src="https://files.catbox.moe/h6gccq.png" alt="Philia995"></a>
+								<a href="https://laura.nekoweb.org"><img src="https://laura.nekoweb.org/img/banner.webp"
+										alt="Laura Sofia Banner" /></a>
+								<a href="https://nekoweb.org/"><img
+										src="https://nekoweb.org/assets/buttons/button6.gif" /></a>
+								<a href="https://picea.nekoweb.org/random/h3ll.html"><img
+										src="https://picea.nekoweb.org/assets/imgs/88x31/tohell.gif"></a>
+								<a href="https://milkyway.moe/"><img
+										src="https://milkyway.moe/buttons/milkybtn.gif"></a>
+								<a href="https://s1nez.nekoweb.org/"><img
+										src="https://s1nez.nekoweb.org/BUTTON.gif"></a>
+								<a href="https://melps.neocities.org" target="_blank"><img
+										src="https://melps.neocities.org/limk1.jpg" width='88px'></a>
+								<a href="https://dxcccii.neocities.org" title="konpyujiru"><img
+										src="https://dxcccii.neocities.org/follow_dxcccii_2.gif">
+								</a>
+								<a href="https://www.jakechirak.com/"><img
+										src="https://www.jakechirak.com/cagibi/jakechirakbutton.gif"></a>
+								<a href="https://000010.neocities.org/" target="_blank"><img
+										src="https://000010.neocities.org/000010.gif"></a>
+								<a href="https://kyumiare.neocities.org/" target="_blank"> <img
+										src="https://dxcccii.neocities.org/kyu.png"></a>
+							</marquee>
+						</div>
+					</div>
 				</td>
 			</tr>
 		</tbody>
@@ -155,10 +340,11 @@
 			});
 		</script>
 		<div style="image-rendering: pixelated;">
-			<script language=" javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=89507337">
-			</script>
-			<noscript><img src="//counter1.fc2.com/counter_img.php?id=89507337" /></noscript> <noscript><img
-					src="//counter1.fc2.com/counter_img.php?id=89507336" /></noscript>
+			<script language=" javascript" type="text/javascript"
+				src="https://counter1.fc2.com/counter.php?id=89507337">
+				</script>
+			<noscript><img src="https://counter1.fc2.com/counter_img.php?id=89507337" /></noscript> <noscript><img
+					src="https://counter1.fc2.com/counter_img.php?id=89507336" /></noscript>
 		</div>
 	</div>
 	<!-- FC2計數器 結束 -->
