音樂盒修復

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						</div>
 					</div>
 					<div style="writing-mode: horizontal-tb;">
-						<div id="musicbox">
+						<div id="musicbox" class="unselectable">
 							<script src="javascript/塊/musicbox.js"></script>
 						</div>
 						<div style="width: 280px;">
