--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 				<td id="上列">
 					<div class="塊" id="个人紹介">
 						<div>
-							<img s-src="素景靑面怒視目多目" class="unselectable" style="float: left; width: 230px"
-								draggable="false" />
+							<img s-src="素景靑面怒視目多目" class="unselectable" style="float: left; width: 230px" draggable="false" />
 							<img id="文者燒殺人" class="unselectable" s-src="文者燒殺人" draggable="false"
 								style="height: 300px; image-rendering: pixelated; margin-right: -10px;" />
 							<p>
@@ -46,16 +45,14 @@
 						<div>
 							<h3>關於我</h3>
 							<ul id="相關我列表" style="padding-right: 20px">
-								<li>我是<b><a href="/wiki.html?title=中國" target="_blank"
-											class="「中國」 wiki">中國</a></b>人:=&CHINA-FLAG=:</li>
+								<li>我是<b><a href="/wiki.html?title=中國" target="_blank" class="「中國」 wiki">中國</a></b>人:=&CHINA-FLAG=:</li>
 								<li><b>生辰</b>：<span class="時間">:=四七〇五·八月$扁=:</span>　<b>室女宮</b>　<b>土象</b>　生肖<b>鼠</b></li>
-								<li><b>男性</b>　理解多元性傾向支持<a class="wiki" target="_blank"
-										href="/wiki.html?title=性別四元論">性別四元論</a>
+								<li><b>男性</b>　理解多元性傾向支持<a class="wiki" target="_blank" href="/wiki.html?title=性別四元論">性別四元論</a>
 								</li>
 								<li><b>ＭＢＴＩ</b>人格爲<a target="_blank"
 										href="https://www.16personalities.com/tw/infp-%E6%80%A7%E6%A0%BC">調停者</a>Ｔ類<a
-										href="/%E7%8B%97INFP-T.html" target="_blank" style="background:none;"><img
-											s-src="MBTI：INFP-T" style="width: 2em; float: up;"></img></a></li>
+										href="/%E7%8B%97INFP-T.html" target="_blank" style="background:none;"><img s-src="MBTI：INFP-T"
+											style="width: 2em; float: up;"></img></a></li>
 								<li><b>編程語言 :=&CODE=:</b><br />學得很雜　譬如<a href="https://scratch.mit.edu/download"
 										target="_blank">SCRATCH</a><span>, </span><a>C++</a><span>,
 									</span><a>GDscript</a>都學過（或學校或自學）其餘主流語言都有了解或可讀</li>
@@ -112,8 +109,7 @@
 							<hr>
 							<a href="https://github.com/soizo/">:=&GITHUB=:　GITHUB</a><br>
 							<a href="https://music.163.com/#/user/home?id=4993481409">:=&廠商：网易云&=:　网易云</a><br>
-							<a
-								href="https://y.qq.com/n/ryqq/profile?uin=oK6kowEAoK4z7K6k7eokoKEA7c**/">:=&廠商：QQ音樂&=:　ＱＱ音樂</a><br>
+							<a href="https://y.qq.com/n/ryqq/profile?uin=oK6kowEAoK4z7K6k7eokoKEA7c**/">:=&廠商：QQ音樂&=:　ＱＱ音樂</a><br>
 						</div>
 					</div>
 					<div style="writing-mode: horizontal-tb;">
@@ -127,32 +123,28 @@
 									image-rendering: pixelated;
 								}
 							</style>
-							<marquee class="迴轉 unselectable" alt="態度" scrollamount="5" loop="infinite"
-								onmouseover="this.stop();" onmouseout="this.start();" direction="right">
+							<marquee class="迴轉 unselectable" alt="態度" scrollamount="5" loop="infinite" onmouseover="this.stop();"
+								onmouseout="this.start();" direction="right">
 
 							</marquee>
-							<marquee class="迴轉 unselectable" alt="好站" scrollamount="5" loop="infinite"
-								onmouseover="this.stop();" onmouseout="this.start();" direction="left">
-								<a href="https://dimden.dev/"><img
-										src="https://dimden.dev/services/images/88x31.gif"></a>
+							<marquee class="迴轉 unselectable" alt="好站" scrollamount="5" loop="infinite" onmouseover="this.stop();"
+								onmouseout="this.start();" direction="left">
+								<a href="https://dimden.dev/"><img src="https://dimden.dev/services/images/88x31.gif"></a>
 								<a href="https://cherubiims.neocities.org" target="_blank"><img
 										src="https://cherubiims.neocities.org/cherubbutton.gif"></a>
 								<a href="https://melokaji.neocities.org/"> <img
 										src="https://melokaji.neocities.org/images/melobutton.gif" alt="melokaji"></a>
-								<a href="https://philia995.neocities.org/"><img
-										src="https://files.catbox.moe/h6gccq.png" alt="Philia995"></a>
+								<a href="https://philia995.neocities.org/"><img src="https://files.catbox.moe/h6gccq.png"
+										alt="Philia995"></a>
 								<a href="https://laura.nekoweb.org"><img src="https://laura.nekoweb.org/img/banner.webp"
 										alt="Laura Sofia Banner" /></a>
-								<a href="https://nekoweb.org/"><img
-										src="https://nekoweb.org/assets/buttons/button6.gif" /></a>
+								<a href="https://nekoweb.org/"><img src="https://nekoweb.org/assets/buttons/button6.gif" /></a>
 								<a href="https://picea.nekoweb.org/random/h3ll.html"><img
 										src="https://picea.nekoweb.org/assets/imgs/88x31/tohell.gif"></a>
-								<a href="https://milkyway.moe/"><img
-										src="https://milkyway.moe/buttons/milkybtn.gif"></a>
-								<a href="https://s1nez.nekoweb.org/"><img
-										src="https://s1nez.nekoweb.org/BUTTON.gif"></a>
-								<a href="https://melps.neocities.org" target="_blank"><img
-										src="https://melps.neocities.org/limk1.jpg" width='88px'></a>
+								<a href="https://milkyway.moe/"><img src="https://milkyway.moe/buttons/milkybtn.gif"></a>
+								<a href="https://s1nez.nekoweb.org/"><img src="https://s1nez.nekoweb.org/BUTTON.gif"></a>
+								<a href="https://melps.neocities.org" target="_blank"><img src="https://melps.neocities.org/limk1.jpg"
+										width='88px'></a>
 								<a href="https://dxcccii.neocities.org" title="konpyujiru"><img
 										src="https://dxcccii.neocities.org/follow_dxcccii_2.gif">
 								</a>
@@ -204,9 +196,8 @@
 			});
 		</script>
 		<div style="image-rendering: pixelated;">
-			<script language=" javascript" type="text/javascript"
-				src="https://counter1.fc2.com/counter.php?id=89507337">
-				</script>
+			<script language=" javascript" type="text/javascript" src="https://counter1.fc2.com/counter.php?id=89507337">
+			</script>
 			<noscript><img src="https://counter1.fc2.com/counter_img.php?id=89507337" /></noscript> <noscript><img
 					src="https://counter1.fc2.com/counter_img.php?id=89507336" /></noscript>
 		</div>
