--- a/index.html
+++ b/index.html
@@ -31,16 +31,21 @@
 				<td id="上列">
 					<div class="塊" id="个人紹介">
 						<div>
-							<img s-src="素景靑面怒視目多目" class="unselectable" style="float: left; width: 230px" draggable="false" />
-							<img id="文者燒殺人" class="unselectable" s-src="文者燒殺人" draggable="false"
-								style="height: 300px; image-rendering: pixelated; margin-right: -10px;" />
-							<p>
-								我是<span style="font-family: 只需HanaMinA; font-weight: bold; font-size: 40px;">灋顯東石</span>
-							</p>
-							<p>這裏是我的个人网站</p>
-							<span>啓始日：</span><span class="時間" style="font-weight: bold">:=四七二〇·二月十七·戌正一刻$扁=:</span>
-							<br />
-							<span class="遮擋下" style="background-color: #000">事實我早些時就啓始了<br />但只是日誌</span>
+							<div style="float: left; height: calc(40% - 17px); overflow: hidden; width: 230px;">
+								<img s-src="素景靑面怒視目多目" class="unselectable" width="180px" draggable="false"
+									style="position: relative; right: 50%; top: 50%; transform: translate(50%, calc(-50% + 17px));" />
+							</div>
+							<div style="float: right; height: 55%">
+								<img id="文者燒殺人" class="unselectable" s-src="文者燒殺人" draggable="false"
+									style="height: 90%; image-rendering: pixelated; margin-right: -4%;" />
+								<p>
+									我是<span style="font-family: 只需HanaMinA; font-weight: bold; font-size: 40px;">灋顯東石</span>
+								</p>
+								<p>這裏是我的个人网站</p>
+								<span>啓始日：</span><span class="時間" style="font-weight: bold">:=四七二〇·二月十七·戌正一刻$扁=:</span>
+								<br />
+								<span class="遮擋下" style="background-color: #000">事實我早些時就啓始了<br />但只是日誌</span>
+							</div>
 						</div>
 						<div>
 							<h3>關於我</h3>
