--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<tbody>
 			<tr>
 				<td id="上列">
-					<div class="塊" id="个人紹介">
+					<div class="塊" id="个人紹介" style="min-height: 260px;">
 						<div>
 							<div style="float: left; height: calc(40% - 17px); overflow: hidden; width: 230px;">
 								<img s-src="素景靑面怒視目多目" class="unselectable" width="180px" draggable="false"
