--- a/wiki.html
+++ b/wiki.html
@@ -17,7 +17,7 @@
 	<link rel="icon" href="/assets/絵文字/WIKI.png" type="image/x-icon" />
 </head>
 
-<body class="prompt-list-group-content">
+<body class="自訂滾動條">
 	<div id="content"></div>
 	<script src="/javascript/wiki/wiki.js"></script>
 </body>
