其他頁面滾動條更新

--- a/我的圖冊.html
+++ b/我的圖冊.html
@@ -106,7 +106,7 @@
 	</style>
 </head>
 
-<body class="prompt-list-group-content">
+<body class="自訂滾動條">
 	<!-- <div id= "友情鏈結">貓盒</div> -->
 	<div id="全部圖片" class="unselectable">
 		<script src="/javascript/我的圖冊/按鈕.js"></script>
