--- a/日誌.html
+++ b/日誌.html
@@ -165,7 +165,7 @@
 	</style>
 </head>
 
-<body class="prompt-list-group-content">
+<body class="自訂滾動條">
 	<a href="#" class="複製今日道曆 unselectable" tabindex="0" draggable="false">複製今日道曆</a>
 	<script>
 		document.querySelectorAll(".複製今日道曆").forEach((link) => {
