--- a/index.html
+++ b/index.html
@@ -112,9 +112,13 @@
 							<a href="/404.html">:=&䈎面圖標：尋无&=:　尋无</a><br>
 							<a href="/聯繫我.html">:=&䈎面圖標：聯繫我&=:　聯繫我</a><br>
 							<hr>
-							<a href="https://github.com/soizo/">:=&GITHUB=:　GITHUB</a><br>
+							<a href="https://github.com/soizo/">:=&廠商：GITHUB&=:　GITHUB</a><br>
 							<a href="https://music.163.com/#/user/home?id=4993481409">:=&廠商：网易云&=:　网易云</a><br>
 							<a href="https://y.qq.com/n/ryqq/profile?uin=oK6kowEAoK4z7K6k7eokoKEA7c**/">:=&廠商：QQ音樂&=:　ＱＱ音樂</a><br>
+							<a href="https://soundcloud.com/files-killer">:=&廠商：音云&=:　音云</a><br>
+							<a
+								href="https://www.douyin.com/user/MS4wLjABAAAA7DgsP4Rh7qMaT80mgaXD3gSqZabn0p4NMIhtOH2fL7kWKXw0WHoQIyCi16VKKz9-">:=&廠商：抖音&=:　抖音</a><br>
+							<a class="失效鏈接" 解釋="目歬没有展示號">:=&廠商：嗶哩嗶哩&=:　嗶哩嗶哩</a><br>
 						</div>
 					</div>
 					<div style="writing-mode: horizontal-tb;">
