修BUG（其實並不很順利，現在是差不多得了的心態）

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					</div>
 				</td>
 				<td id="下列">
-					<div class="塊 最近更新日期 unselectable">
+					<div 備註="最近更新日期" class="塊 最近更新日期 unselectable">
 						<span>最近更新日期：</span><br />
 						<span class="時間 selectableAsText" id="GIT：今倉庫最近更新時間">
 							<script>
@@ -123,11 +123,11 @@
 							<a href="https://www.xiaohongshu.com/user/profile/615aeca0000000000201f3ae">:=&廠商：小紅書&=:　小紅書</a><br>
 						</div>
 					</div>
-					<div style="writing-mode: horizontal-tb;">
+					<div 備註="MusicBox和跑馬燈" style="writing-mode: horizontal-tb;">
 						<div id="musicbox" class="unselectable">
 							<script src="javascript/塊/musicbox.js"></script>
 						</div>
-						<div style="width: 280px;">
+						<div 備註="跑馬燈" style="width: 280px;">
 							<style>
 								.迴轉 * {
 									height: 30px;
@@ -173,7 +173,7 @@
 		</tbody>
 	</table>
 	<!-- FC2計數器 開始 -->
-	<div id="計數器" class="unselectable" draggable="false">
+	<div 備註="可愛少女舉牌計數器" id="計數器" class="unselectable" draggable="false">
 		<style>
 			#計數器 {
 				writing-mode: horizontal-tb;
