更改解釋塊設置

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 							<a href="https://soundcloud.com/files-killer">:=&廠商：音云&=:　音云</a><br>
 							<a
 								href="https://www.douyin.com/user/MS4wLjABAAAA7DgsP4Rh7qMaT80mgaXD3gSqZabn0p4NMIhtOH2fL7kWKXw0WHoQIyCi16VKKz9-">:=&廠商：抖音&=:　抖音</a><br>
-							<a class="失效鏈接" 失效鏈接解釋="目歬没有展示號
-煮波之後可能會創建">:=&廠商：嗶哩嗶哩&=:　嗶哩嗶哩</a><br>
+							<a class="失效鏈接 解釋 unselectable" 解釋="目歬没有展示號
+煮波之後可能會創建" style="text-decoration: line-through; color :grey;">:=&廠商：嗶哩嗶哩&=:　嗶哩嗶哩</a><br>
 							<a href="https://www.xiaohongshu.com/user/profile/615aeca0000000000201f3ae">:=&廠商：小紅書&=:　小紅書</a><br>
 						</div>
 					</div>
