--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 							<a href="/">✩　主䈎</a><br>
 							<a href="/日誌.html">:=&䈎面圖標：日誌&=:　日誌</a><br>
 							<a href="/404.html">:=&䈎面圖標：尋无&=:　尋无</a><br>
+							<a href="/CAMERA.html">:=&䈎面圖標：CAMERA&=:　相機</a><br>
 							<a href="/聯繫我.html">:=&䈎面圖標：聯繫我&=:　聯繫我</a><br>
+							<div class="解釋" 解釋="之後會做">:=&䈎面圖標：媒體播放器&=:　<span class="失效鏈接">媒體播放器</span></div><br>
 							<hr>
 							<a href="https://github.com/soizo/">:=&廠商：GITHUB&=:　GITHUB</a><br>
 							<a href="https://music.163.com/#/user/home?id=4993481409">:=&廠商：网易云&=:　网易云</a><br>
@@ -118,8 +120,8 @@
 							<a href="https://soundcloud.com/files-killer">:=&廠商：音云&=:　音云</a><br>
 							<a
 								href="https://www.douyin.com/user/MS4wLjABAAAA7DgsP4Rh7qMaT80mgaXD3gSqZabn0p4NMIhtOH2fL7kWKXw0WHoQIyCi16VKKz9-">:=&廠商：抖音&=:　抖音</a><br>
-							<a class="失效鏈接 解釋 unselectable" 解釋="目歬没有展示號
-煮波之後可能會創建" style="text-decoration: line-through; color :grey;">:=&廠商：嗶哩嗶哩&=:　嗶哩嗶哩</a><br>
+							<div class="解釋 unselectable" 解釋="目歬没有展示號
+煮波之後可能會創建">:=&廠商：嗶哩嗶哩&=:　<span class="失效鏈接">嗶哩嗶哩</span></div><br>
 							<a href="https://www.xiaohongshu.com/user/profile/615aeca0000000000201f3ae">:=&廠商：小紅書&=:　小紅書</a><br>
 						</div>
 					</div>
