--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							</script>
 						</span>
 					</div>
-					<div id="我的䈎面" class="塊 ">
+					<div id="我的䈎面" class="塊 unselectable">
 						<h2>
 							:=&我的䈎面=: 我的䈎面
 						</h2>
@@ -112,7 +112,8 @@
 							<a href="/404.html">:=&䈎面圖標：尋无&=:　尋无</a><br>
 							<a href="/CAMERA.html">:=&䈎面圖標：CAMERA&=:　相機</a><br>
 							<a href="/聯繫我.html">:=&䈎面圖標：聯繫我&=:　聯繫我</a><br>
-							<div class="解釋" 解釋="之後會做">:=&䈎面圖標：媒體播放器&=:　<span class="失效鏈接">媒體播放器</span></div><br>
+							<a href="/wiki.html">:=&wiki=:　ＷＩＫＩ</a><br>
+							<div class="解釋" 解釋="之後會做">:=&䈎面圖標：媒體播放器&=:　<span class="失效鏈接">媒體播放器</span></div>
 							<hr>
 							<a href="https://github.com/soizo/">:=&廠商：GITHUB&=:　GITHUB</a><br>
 							<a href="https://music.163.com/#/user/home?id=4993481409">:=&廠商：网易云&=:　网易云</a><br>
@@ -121,7 +122,7 @@
 							<a
 								href="https://www.douyin.com/user/MS4wLjABAAAA7DgsP4Rh7qMaT80mgaXD3gSqZabn0p4NMIhtOH2fL7kWKXw0WHoQIyCi16VKKz9-">:=&廠商：抖音&=:　抖音</a><br>
 							<div class="解釋 unselectable" 解釋="目歬没有展示號
-煮波之後可能會創建">:=&廠商：嗶哩嗶哩&=:　<span class="失效鏈接">嗶哩嗶哩</span></div><br>
+煮波之後可能會創建">:=&廠商：嗶哩嗶哩&=:　<span class="失效鏈接">嗶哩嗶哩</span></div>
 							<a href="https://www.xiaohongshu.com/user/profile/615aeca0000000000201f3ae">:=&廠商：小紅書&=:　小紅書</a><br>
 						</div>
 					</div>
@@ -144,6 +145,9 @@
 								<img src="/assets/圖象/貼紙/態度/asswolf_txt.gif">
 								<img src="/assets/圖象/貼紙/態度/phonechump.gif" alt="">
 								<img src="/assets/圖象/貼紙/態度/win95.gif" alt="">
+								<img src="/assets/圖象/貼紙/態度/大中華漢文化復興萬歲.gif" alt="">
+								<img src="/assets/圖象/貼紙/態度/火.gif" alt="">
+								<img src="/assets/圖象/貼紙/態度/不昰二次元.png" alt="">
 							</marquee>
 
 							<marquee class="迴轉 unselectable" 備註="好站" scrollamount="5" loop="infinite" onmouseover="this.stop();"
