世界級宇宙級超級超級無敵大更動更新
1. 留言板（漢化和樣式）
2. 俊達萌
3. 一些个性標籤
4. 其他亂七八糟的系統修改

--- a/wiki.html
+++ b/wiki.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="height=device-height, initial-scale=0.9" />
 	<title>SOIZO wiki</title>
 	<script src="/javascript/公共/好多函數！.js"></script>
-	<script src="/javascript/公共/橫向捲動.js"></script>
 	<script src="/javascript/公共/私用字.js"></script>
 	<script src="/javascript/公共/絵文字.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
@@ -17,7 +16,7 @@
 	<link rel="icon" href="/assets/絵文字/WIKI.png" type="image/x-icon" />
 </head>
 
-<body class="自訂滾動條">
+<body class="自訂滾動條 橫向捲動">
 	<div id="content"></div>
 	<script src="/javascript/wiki/wiki.js"></script>
 </body>
