--- a/我的圖冊.html
+++ b/我的圖冊.html
@@ -6,7 +6,6 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="height=device-height, initial-scale=1.0" />
 	<script src="/javascript/公共/好多函數！.js"></script>
-	<script src="/javascript/公共/橫向捲動.js"></script>
 	<link rel="icon" s-href="䈎面圖標：我的圖冊" type="image/x-icon" />
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/滾動條/方滾動條.css" rel="stylesheet" type="text/css" media="all" />
@@ -106,7 +105,7 @@
 	</style>
 </head>
 
-<body class="自訂滾動條">
+<body class="自訂滾動條 橫向捲動">
 	<!-- <div id= "友情鏈結">貓盒</div> -->
 	<div id="全部圖片" class="unselectable">
 		<script src="/javascript/我的圖冊/按鈕.js"></script>
