--- a/日誌.html
+++ b/日誌.html
@@ -6,7 +6,6 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="height=device-height, initial-scale=1.0" />
 	<script src="/javascript/公共/好多函數！.js"></script>
-	<script src="/javascript/公共/橫向捲動.js"></script>
 	<script src="/javascript/日誌/日誌.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
 	<script src="/javascript/公共/絵文字.js"></script>
@@ -165,7 +164,7 @@
 	</style>
 </head>
 
-<body class="自訂滾動條">
+<body class="自訂滾動條 橫向捲動">
 	<a href="#" class="複製今日道曆 unselectable" tabindex="0" draggable="false">複製今日道曆</a>
 	<script>
 		document.querySelectorAll(".複製今日道曆").forEach((link) => {
