--- a/聯繫我.html
+++ b/聯繫我.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="height=device-height, initial-scale=0.9" />
 	<title>聯繫我！</title>
 	<script src="/javascript/公共/好多函數！.js"></script>
-	<script src="/javascript/公共/橫向捲動.js"></script>
 	<script src="/javascript/index/index.js"></script>
 	<script src="/javascript/公共/私用字.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
@@ -20,7 +19,7 @@
 	<link href="/css/聯繫我.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 
-<body>
+<body class="橫向捲動">
 	<div id='大容器'>
 		阿斯蒂芬
 	</div>
