--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html 滾動條theme="泉此方綠">
+<html>
 
 <head>
 	<meta charset="UTF-8" />
@@ -10,7 +10,6 @@
 
 	<title>灋顯東石的个人主䈎</title>
 	<script src="/javascript/公共/好多函數！.js"></script>
-	<script src="/javascript/公共/橫向捲動.js"></script>
 	<script src="/javascript/index/index.js"></script>
 	<script src="/javascript/公共/私用字.js"></script>
 	<script src="/javascript/公共/豎排符號.js"></script>
@@ -24,7 +23,7 @@
 	<link href="/css/index.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 
-<body class="自訂滾動條">
+<body class="自訂滾動條 橫向捲動" 滾動條theme="泉此方綠">
 	<table>
 		<tbody>
 			<tr>
@@ -79,7 +78,7 @@
 						</ul>
 					</div>
 				</td>
-				<td id="下列">
+				<td id="下列" style="overflow: visible;">
 					<div 備註="最近更新日期" class="塊 最近更新日期 unselectable">
 						<span>最近更新日期：</span><br />
 						<span class="時間 selectableAsText" id="GIT：今倉庫最近更新時間">
@@ -126,7 +125,7 @@
 							<a href="https://www.xiaohongshu.com/user/profile/615aeca0000000000201f3ae">:=&廠商：小紅書&=:　小紅書</a><br>
 						</div>
 					</div>
-					<div 備註="MusicBox和跑馬燈" style="writing-mode: horizontal-tb;">
+					<div 備註="MusicBox和跑馬燈" style="writing-mode: horizontal-tb; margin:5px; margin-top: 0;">
 						<div id="musicbox" class="unselectable undraggable">
 							<script src="javascript/塊/musicbox.js"></script>
 						</div>
@@ -148,6 +147,7 @@
 								<img src="/assets/圖象/貼紙/態度/大中華漢文化復興萬歲.gif" alt="">
 								<img src="/assets/圖象/貼紙/態度/火.gif" alt="">
 								<img src="/assets/圖象/貼紙/態度/不昰二次元.png" alt="">
+								<img src="/assets/圖象/貼紙/態度/支持中共.png" alt="">
 							</marquee>
 
 							<marquee class="迴轉 unselectable" 備註="好站" scrollamount="5" loop="infinite" onmouseover="this.stop();"
@@ -179,6 +179,10 @@
 										src="https://dxcccii.neocities.org/kyu.png"></a>
 							</marquee>
 						</div>
+					</div>
+					<div id="cbox" class="橫向捲動">
+						<script src="/javascript/樣式/cbox.js"></script>
+						<link href="/css/cbox/泉此方綠.css" rel="stylesheet" type="text/css" media="all" />
 					</div>
 				</td>
 			</tr>
