重寫橫向捲動 index

--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
 										src="https://dxcccii.neocities.org/kyu.png"></a>
 							</marquee>
 						</div>
+						<div style="writing-mode: vertical-rl;"><textarea
+								style="writing-mode: horizontal-tb; resize: none; overflow-y: auto;"></textarea>
+							<div id="mySiteLink" 備註="我貼紙">
+								<img src="/assets/圖象/貼紙/网站/soizo.gif" alt="" />
+								<img src="/assets/圖象/貼紙/网站/soizo_wave_1.gif" alt="" />
+								<img src="/assets/圖象/貼紙/网站/soizo_wave.gif" alt="" />
+								<!-- <marquee direction="down" style="height: 100px;"></marquee> -->
+							</div>
+						</div>
 					</div>
 					<div id="cbox" class="橫向捲動">
 						<script src="/javascript/樣式/cbox.js"></script>
