--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<a href="/wiki.html">:=&wiki=:　ＷＩＫＩ</a><br>
 							<div class="解釋" 解釋="之後會做">:=&䈎面圖標：媒體播放器&=:　<span class="失效鏈接">媒體播放器</span></div>
 							<hr>
-							<a href="https://github.com/soizo/">:=&廠商：GITHUB&=:　GITHUB</a><br>
+							<a href="https://github.com/soizo/soizo.github.io">:=&廠商：GITHUB&=:　GITHUB</a><br>
 							<a href="https://music.163.com/#/user/home?id=4993481409">:=&廠商：网易云&=:　网易云</a><br>
 							<a href="https://y.qq.com/n/ryqq/profile?uin=oK6kowEAoK4z7K6k7eokoKEA7c**/">:=&廠商：QQ音樂&=:　ＱＱ音樂</a><br>
 							<a href="https://soundcloud.com/files-killer">:=&廠商：音云&=:　音云</a><br>
@@ -127,7 +127,7 @@
 					</div>
 					<div 備註="MusicBox和跑馬燈" style="writing-mode: horizontal-tb; margin:5px; margin-top: 0;">
 						<div id="musicbox" class="unselectable undraggable">
-							<script src="javascript/塊/musicbox.js"></script>
+							<script src="/javascript/塊/musicbox.js"></script>
 						</div>
 						<div id="跑馬燈" style="width: 280px;">
 							<style>
@@ -146,7 +146,7 @@
 								<img src="/assets/圖象/貼紙/態度/win95.gif" alt="">
 								<img src="/assets/圖象/貼紙/態度/大中華漢文化復興萬歲.gif" alt="">
 								<img src="/assets/圖象/貼紙/態度/火.gif" alt="">
-								<img src="/assets/圖象/貼紙/態度/不昰二次元.png" alt="">
+								<!-- <img src="/assets/圖象/貼紙/態度/不昰二次元.png" alt=""> -->
 								<img src="/assets/圖象/貼紙/態度/支持中共.png" alt="">
 							</marquee>
 
@@ -177,14 +177,18 @@
 										src="https://000010.neocities.org/000010.gif"></a>
 								<a href="https://kyumiare.neocities.org/" target="_blank"> <img
 										src="https://dxcccii.neocities.org/kyu.png"></a>
+								<a href="https://soizo.github.io/" target="_blank">
+									<img src="/assets/圖象/貼紙/网站/soizo.gif"></a>
 							</marquee>
 						</div>
-						<div style="writing-mode: vertical-rl;"><textarea
-								style="writing-mode: horizontal-tb; resize: none; overflow-y: auto;"></textarea>
+						<div style="writing-mode: vertical-rl;">
+							<textarea id="mySiteLink框" class="自訂滾動條" 滾動條theme=""></textarea>
 							<div id="mySiteLink" 備註="我貼紙">
-								<img src="/assets/圖象/貼紙/网站/soizo.gif" alt="" />
-								<img src="/assets/圖象/貼紙/网站/soizo_wave_1.gif" alt="" />
-								<img src="/assets/圖象/貼紙/网站/soizo_wave.gif" alt="" />
+								<a onclick='替換mySiteLink框("soizo.gif")'><img src=" /assets/圖象/貼紙/网站/soizo.gif" alt="" /></a>
+								<a onclick='替換mySiteLink框("soizo_wave_1.gif")'><img src="/assets/圖象/貼紙/网站/soizo_wave_1.gif"
+										alt="" /></a></a>
+								<a onclick='替換mySiteLink框("soizo_wave.gif")'>
+									<img src="/assets/圖象/貼紙/网站/soizo_wave.gif" alt="" /></a>
 								<!-- <marquee direction="down" style="height: 100px;"></marquee> -->
 							</div>
 						</div>
