--- a/日誌.html
+++ b/日誌.html
@@ -129,7 +129,7 @@
 			padding-left: 0px;
 		}
 
-		.複製今日道曆 {
+		a.按鈕 {
 			font-size: 25px;
 			text-decoration: none;
 			border: 0.5px dashed #00000000;
@@ -140,15 +140,16 @@
 			padding-bottom: 10px;
 			padding-left: 10px;
 			padding-right: 10px;
+			cursor: pointer;
 		}
 
 		@media (hover: hover) {
-			.複製今日道曆:hover {
+			a.按鈕:hover {
 				color: #000000;
 				background-color: #ffffff;
 			}
 
-			.複製今日道曆:active {
+			a.按鈕:active {
 				color: aqua;
 				background-color: #000000;
 				border-color: aqua;
@@ -156,7 +157,7 @@
 		}
 
 		@media (hover: none) {
-			.複製今日道曆:focus {
+			a.按鈕:focus {
 				color: #000000;
 				background-color: #ffffff;
 			}
@@ -165,22 +166,8 @@
 </head>
 
 <body class="自訂滾動條 橫向捲動">
-	<a href="#" class="複製今日道曆 unselectable" tabindex="0" draggable="false">複製今日道曆</a>
-	<script>
-		document.querySelectorAll(".複製今日道曆").forEach((link) => {
-			link.addEventListener("click", async function (event) {
-				event.preventDefault();
-				try {
-					const textToCopy = 轉換道曆(
-						new Date(),
-						1,
-						`/---/\nwww\tyyyy/mm/dd/HHQQ`
-					);
-					await navigator.clipboard.writeText(textToCopy);
-				} catch (err) { }
-			});
-		});
-	</script>
+	<a onclick="複製今日道曆();" class="按鈕 unselectable" draggable="false">複製今日道曆</a>
+	<a onclick="刷新网䈎();" class="按鈕 unselectable" draggable="false">刷新网䈎</a>
 
 	<div id="日誌內容">
 		<script src="/javascript/日誌/処理文本.js"></script>
