--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<a href="/404.html">:=&䈎面圖標：尋无&=:　尋无</a><br>
 							<a href="/CAMERA.html">:=&䈎面圖標：CAMERA&=:　相機</a><br>
 							<a href="/聯繫我.html">:=&䈎面圖標：聯繫我&=:　聯繫我</a><br>
-							<a href="/wiki.html">:=&wiki=:　ＷＩＫＩ</a><br>
+							<a href="/wiki.html">:=&WIKI=:　ＷＩＫＩ</a><br>
 							<div class="解釋" 解釋="之後會做">:=&䈎面圖標：媒體播放器&=:　<span class="失效鏈接">媒體播放器</span></div>
 							<hr>
 							<a href="https://github.com/soizo/soizo.github.io">:=&廠商：GITHUB&=:　GITHUB</a><br>
@@ -183,7 +183,7 @@
 						</div>
 						<div style="writing-mode: vertical-rl;">
 							<textarea id="mySiteLink框" class="自訂滾動條" 滾動條theme=""></textarea>
-							<div id="mySiteLink" 備註="我貼紙">
+							<div id="mySiteLink" 備註="我貼紙" class="unselectable">
 								<a onclick='替換mySiteLink框("soizo.gif")'><img src=" /assets/圖象/貼紙/网站/soizo.gif" alt="" /></a>
 								<a onclick='替換mySiteLink框("soizo_wave_1.gif")'><img src="/assets/圖象/貼紙/网站/soizo_wave_1.gif"
 										alt="" /></a></a>
