--- a/日誌.html
+++ b/日誌.html
@@ -166,7 +166,7 @@
 </head>
 
 <body class="自訂滾動條 橫向捲動">
-	<a onclick="複製今日道曆();" class="按鈕 unselectable" draggable="false">複製今日道曆</a>
+	<a onclick="複製今日道曆();" class="按鈕 unselectable" draggable="false">複製今時</a>
 	<a onclick="刷新网䈎();" class="按鈕 unselectable" draggable="false">刷新网䈎</a>
 
 	<div id="日誌內容">
