--- a/日誌.html
+++ b/日誌.html
@@ -29,7 +29,7 @@
 	<a onclick="刷新网䈎();" class="按鈕 unselectable" draggable="false">刷新网䈎</a>
 
 	<div id="日誌內容">
-		<script src="/javascript/日誌/処理文本.js"></script>
+		<!-- <script src="/javascript/日誌/処理文本.js"></script> -->
 	</div>
 </body>
 
