--- a/日誌.html
+++ b/日誌.html
@@ -25,8 +25,9 @@
 </head>
 
 <body class="自訂滾動條 橫向捲動">
-	<a onclick="複製今日道曆();" class="按鈕 unselectable" draggable="false">複製今時</a>
-	<a onclick="刷新网䈎();" class="按鈕 unselectable" draggable="false">刷新网䈎</a>
+	<div class="unselectable"><a onclick="複製今日道曆();" class="按鈕 unselectable" draggable="false">複製今時</a>
+		<a onclick="刷新网䈎();" class="按鈕 unselectable" draggable="false">刷新网䈎</a>
+	</div>
 
 	<div id="日誌內容">
 		<!-- <script src="/javascript/日誌/処理文本.js"></script> -->
