--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 							</script>
 						</span>
 					</div>
+					<div class="塊">最近項目：<br />个人主䈎：<a href="/畫廊.html" target="_blank">畫廊</a>
+					</div>
 					<div id="我的䈎面" class="塊 unselectable">
 						<h2>
 							:=&我的䈎面=: 我的䈎面
