--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							</script>
 						</span>
 					</div>
-					<div class="塊">最近項目：<br />个人主䈎：<a href="/畫廊.html" target="_blank">畫廊</a>
+					<div class="塊">最近項目：<br />个人主䈎的<a href="/畫廊.html" target="_blank">畫廊</a>
 					</div>
 					<div id="我的䈎面" class="塊 unselectable">
 						<h2>
