--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="theme-color" content="#dff1db">
 
 
-	<title>灋顯東石的个人主䈎</title>
+	<title>水圖丹它的个人主䈎</title>
 	<script src="/javascript/公共/好多函數！.js"></script>
 	<script src="/javascript/index/index.js"></script>
 	<script src="/javascript/公共/私用字.js"></script>
@@ -38,7 +38,7 @@
 								<img id="文者燒殺人" class="unselectable" s-src="文者燒殺人" draggable="false"
 									style="height: 90%; image-rendering: pixelated; margin-right: -4%;" />
 								<p>
-									我是<span style="font-family: 只需HanaMinA; font-weight: bold; font-size: 40px;">灋顯東石</span>
+									我是<span style="font-family: 只需HanaMinA; font-weight: bold; font-size: 40px;">水圖丹它</span>
 								</p>
 								<p>這裏是我的个人网站</p>
 								<span>啓始日：</span><span class="時間" style="font-weight: bold">:=四七二〇·二月十七·戌正一刻$扁=:</span>
