--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 							<a href="/camera.html">:=&䈎面圖標：CAMERA&=:　相機</a><br>
 							<a href="/聯繫我.html">:=&䈎面圖標：聯繫我&=:　聯繫我</a><br>
 							<a href="/wiki.html">:=&WIKI=:　ＷＩＫＩ</a><br>
+							<div class="解釋" 解釋="正在做">:=&䈎面圖標：畫廊&=:　<span class="失效鏈接">畫廊</span></div>
 							<div class="解釋" 解釋="之後會做">:=&䈎面圖標：媒體播放器&=:　<span class="失效鏈接">媒體播放器</span></div>
 							<hr>
 							<a href="https://github.com/soizo/soizo.github.io">:=&廠商：GITHUB&=:　GITHUB</a><br>
@@ -124,6 +125,8 @@
 								href="https://www.douyin.com/user/MS4wLjABAAAA7DgsP4Rh7qMaT80mgaXD3gSqZabn0p4NMIhtOH2fL7kWKXw0WHoQIyCi16VKKz9-">:=&廠商：抖音&=:　抖音</a><br>
 							<div class="解釋 unselectable" 解釋="目歬没有展示號
 煮波之後可能會創建">:=&廠商：嗶哩嗶哩&=:　<span class="失效鏈接">嗶哩嗶哩</span></div>
+							<div class="解釋 unselectable" 解釋="目歬没有作品">:=&廠商：Acfun&=:　<a
+									href="https://www.acfun.cn/u/75196779">Acfun</a></div>
 							<a href="https://www.xiaohongshu.com/user/profile/615aeca0000000000201f3ae">:=&廠商：小紅書&=:　小紅書</a><br>
 						</div>
 					</div>
