--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 								<img src="/assets/圖象/貼紙/態度/大中華漢文化復興萬歲.gif" alt="">
 								<img src="/assets/圖象/貼紙/態度/火.gif" alt="">
 								<!-- <img src="/assets/圖象/貼紙/態度/不昰二次元.png" alt=""> -->
-								<img src="/assets/圖象/貼紙/態度/支持中共.png" alt="">
+								<img src="/assets/圖象/貼紙/態度/愛國愛黨.png" alt="">
+								<img src="/assets/圖象/貼紙/態度/倉頡.png" alt="">
 							</marquee>
 
 							<marquee class="迴轉 unselectable" 備註="好站" scrollamount="5" loop="infinite" onmouseover="this.stop();"
