--- a/畫廊.html
+++ b/畫廊.html
@@ -7,29 +7,26 @@
 	<meta name="viewport" content="height=device-height, initial-scale=1.0" />
 
 	<script src="/javascript/公共/好多函數！.js"></script>
-	<script src="/javascript/公共/豎排符號.js"></script>
+	<!-- <script src="/javascript/公共/豎排符號.js"></script> -->
 	<script src="/javascript/公共/絵文字.js"></script>
 	<script src="/javascript/畫廊/畫廊.js"></script>
 	<script src="/javascript/畫廊/畫廊配置.js"></script>
 	<script src="/javascript/畫廊/onclicks.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 	<link rel="icon" s-href="䈎面圖標：畫廊" type="image/x-icon" />
 	<link href="/css/畫廊/畫廊.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/畫廊/畫廊展示項目.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/css/滾動條/方滾動條.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 
 <body>
+	<div id="開屏"></div>
 	<div id="全部UI" 配色主題="默認">
 		<input type="checkbox" id="sidebarToggle">
 		<label for="sidebarToggle" id="sidebarToggleLabel"></label>
-		<div id="sidebar" class="unselectable">
-			<ul>
-				<li>匣污系</li>
-				<ul>
-					<li><a href="#1赤景靑面怒視目">赤景靑面怒視目</a></li>
-				</ul>
-			</ul>
+		<div id="sidebar" class="unselectable 自訂滾動條" 滾動條theme="js">
 		</div>
 		<div id="content" class="unselectable undraggable">
 			<button class="上" onclick="上翻䈎()">
@@ -46,11 +43,43 @@
 			</button>
 			<div id="展示">
 				<div class="展示項目" 識別符="赤景靑面怒視目">
-					<img src="/assets/圖象/赤景靑面怒視目.jpg" alt="">
+					<img src="/assets/圖象/畫廊/赤景靑面怒視目.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="驚悚鏡像白目黑白口美羊羊">
+					<img src="/assets/圖象/畫廊/驚悚鏡像白目黑白口美羊羊.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="貓和老鼠錯亂房間">
+					<img src="/assets/圖象/畫廊/貓和老鼠錯亂房間.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="𫜵恩，停𫜵倅發病">
+					<img src="/assets/圖象/畫廊/𫜵恩，停𫜵倅發病.jpg" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="仌屍">
+					<img src="/assets/圖象/畫廊/仌屍.JPG" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="栗炭千唯">
+					<img src="/assets/圖象/畫廊/栗炭千唯.JPG" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="病禍">
+					<img src="/assets/圖象/畫廊/病禍.JPG" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="ちいかわ">
+					<img src="/assets/圖象/畫廊/ちいかわ.JPG" alt="">
+					<div class="BG"></div>
+				</div>
+				<div class="展示項目" 識別符="春日歩持刀可愛核">
+					<img src="/assets/圖象/畫廊/春日歩持刀可愛核.JPG" alt="">
 					<div class="BG"></div>
 				</div>
 				<div class="展示項目" 識別符="法顯東石謔諧然">
-					<img src="/assets/圖象/法顯東石謔諧然.jpg" alt="">
+					<img src="/assets/圖象/畫廊/法顯東石謔諧然.jpg" alt="">
 					<div class="BG"></div>
 					<canvas></canvas>
 					<script>
@@ -76,8 +105,8 @@
 						setInterval("draw()", 70);
 					</script>
 				</div>
-				<div class="展示項目" 識別符="asd">
-					asdfa
+				<div class="展示項目" id="展示項目尋无" style="color: aliceblue;">
+					展示項目尋无
 				</div>
 			</div>
 		</div>
