--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<a href="/camera.html">:=&䈎面圖標：CAMERA&=:　相機</a><br>
 							<a href="/聯繫我.html">:=&䈎面圖標：聯繫我&=:　聯繫我</a><br>
 							<a href="/wiki.html">:=&WIKI=:　ＷＩＫＩ</a><br>
-							<div class="解釋" 解釋="正在做">:=&䈎面圖標：畫廊&=:　<span class="失效鏈接">畫廊</span></div>
+							<a href="/畫廊.html">:=&䈎面圖標：畫廊&=:　畫廊</a>
 							<div class="解釋" 解釋="之後會做">:=&䈎面圖標：媒體播放器&=:　<span class="失效鏈接">媒體播放器</span></div>
 							<hr>
 							<a href="https://github.com/soizo/soizo.github.io">:=&廠商：GITHUB&=:　GITHUB</a><br>
